--- a/index.html
+++ b/index.html
@@ -8,58 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>INSERTMACRO</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">О нас</a></li>
-        <li><a href="#products">Товары</a></li>
-      </ul>
-    </nav>
+    INSERTMACRO
   </header>
-
-  <section id="about">
-    <h2>О нас</h2>
-    <p>Мы команда - INSERTMACRO. Стараемся для вас, выпуская лучшие андетект макросы для популярных игр. Спасибо, что вы с нами!</p>
-  </section>
-
-  <section id="products">
-    <h2>Товары</h2>
-    <div class="product">
-      <h3>Standoff 2</h3>
-      <p>Макросы для улучшения точности и реакции в Standoff 2. Получите преимущество в каждом раунде!</p>
-    </div>
-    <div class="product">
-      <h3>CS2</h3>
-      <p>Профессиональные макросы для CS2. Улучшите свой геймплей и станьте лучшим в игре.</p>
-    </div>
-    <div class="product">
-      <h3>RUST</h3>
-      <p>Макросы для автоматизации ресурсов и строительства в RUST. Экономьте время и выживайте быстрее.</p>
-    </div>
-    <div class="product">
-      <h3>PUBG</h3>
-      <p>Макросы для точной стрельбы и быстрой реакции в PUBG. Доминируйте на поле боя.</p>
-    </div>
-    <div class="product">
-      <h3>APEX LEGENDS</h3>
-      <p>Улучшите свое мастерство в APEX LEGENDS с нашими макросами. Будьте первыми в каждой игре.</p>
-    </div>
-    <div class="product">
-      <h3>ESCAPE FROM TARKOV</h3>
-      <p>Макросы для упрощения прохождения и улучшения боевых навыков в ESCAPE FROM TARKOV.</p>
-    </div>
-    <div class="product">
-      <h3>CALL OF DUTY</h3>
-      <p>Макросы для всех частей CALL OF DUTY. Выбирайте свою версию:</p>
-      <ul>
-        <li>CoD MW 3 - Макросы для современной войны.</li>
-        <li>COD BO6 - Макросы для улучшения геймплея в Black Ops 6.</li>
-      </ul>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2023 INSERTMACRO. Все права защищены.</p>
-  </footer>
+  <nav>
+    <a href="about.html"><button>О нас</button></a>
+    <a href="products.html"><button>Товары</button></a>
+  </nav>
+  <div class="content">
+    <h2>Добро пожаловать в INSERTMACRO!</h2>
+    <p>Выберите раздел выше, чтобы узнать больше о нас или посмотреть наши товары.</p>
+  </div>
 </body>
 </html>
