--- a/about.html
+++ b/about.html
@@ -8,15 +8,17 @@
 </head>
 <body>
   <header>
-    INSERTMACRO
+    <div class="logo">INSERTMACRO</div>
   </header>
   <nav>
     <a href="index.html"><button>Главная</button></a>
+    <a href="about.html"><button>О нас</button></a>
     <a href="products.html"><button>Товары</button></a>
   </nav>
   <div class="content">
     <h2>О нас</h2>
     <p>Мы команда - INSERTMACRO. Стараемся для вас, выпуская лучшие андетект макросы для популярных игр. Спасибо, что вы с нами!</p>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
