--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
   <header>
-    INSERTMACRO
+    <div class="logo">INSERTMACRO</div>
   </header>
   <nav>
+    <a href="index.html"><button>Главная</button></a>
     <a href="about.html"><button>О нас</button></a>
     <a href="products.html"><button>Товары</button></a>
   </nav>
   <div class="content">
-    <h2>Добро пожаловать в INSERTMACRO!</h2>
-    <p>Выберите раздел выше, чтобы узнать больше о нас или посмотреть наши товары.</p>
+    <h2>Добро пожаловать на INSERTMACRO!</h2>
+    <p>Выберите раздел выше, чтобы узнать больше о нас или посмотреть и купить наши товары.</p>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
