--- a/products.html
+++ b/products.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <header>
-    INSERTMACRO
+    <div class="logo">INSERTMACRO</div>
   </header>
   <nav>
     <a href="index.html"><button>Главная</button></a>
     <a href="about.html"><button>О нас</button></a>
+    <a href="products.html"><button>Товары</button></a>
   </nav>
   <div class="content">
     <h2>Товары</h2>
@@ -51,5 +52,6 @@
       </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
