--- a/index.html
+++ b/index.html
@@ -1,24 +1,206 @@
 <!DOCTYPE html>
+
 <html lang="ru">
+
 <head>
+
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>INSERTMACRO</title>
+
   <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
+
   <header>
-    <div class="logo">INSERTMACRO</div>
+
+    <h1 id="animatedTitle">INSERTMACRO</h1>
+
+    <nav>
+
+      <ul>
+
+        <li><a href="#about">О нас</a></li>
+
+        <li><a href="#products">Товары</a></li>
+
+      </ul>
+
+    </nav>
+
   </header>
-  <nav>
-    <a href="index.html"><button>Главная</button></a>
-    <a href="about.html"><button>О нас</button></a>
-    <a href="products.html"><button>Товары</button></a>
-  </nav>
-  <div class="content">
-    <h2>Добро пожаловать на INSERTMACRO!</h2>
-    <p>Выберите раздел выше, чтобы узнать больше о нас или посмотреть и купить наши товары.</p>
+
+  <section id="about">
+
+    <div class="content">
+
+      <h2>О нас</h2>
+
+      <p>Побеждай, Побеждай, Побеждай, Побеждай. Только с INSERTMACRO.</p>
+
+    </div>
+
+  </section>
+
+  <section id="products">
+
+    <h2>Товары</h2>
+
+    <div class="product-grid">
+
+      <!-- Пример для Rust -->
+
+      <div class="product-card">
+
+        <h3>RUST <span class="status undetected">Undetected</span></h3>
+
+        <p>Чтобы увидеть подробное описание, нажмите на "Купить".</p>
+
+        <button onclick="openModal('rustModal')">Купить</button>
+
+      </div>
+
+      <!-- Пример для CS2 -->
+
+      <div class="product-card">
+
+        <h3>CS2 <span class="status undetected">Undetected</span></h3>
+
+        <p>Чтобы увидеть подробное описание, нажмите на "Купить".</p>
+
+        <button onclick="openModal('cs2Modal')">Купить</button>
+
+      </div>
+
+      <!-- Пример для Apex Legends -->
+
+      <div class="product-card">
+
+        <h3>APEX LEGENDS <span class="status detected">Detected</span></h3>
+
+        <p>Чтобы увидеть подробное описание, нажмите на "Купить".</p>
+
+        <button class="disabled">Недоступно</button>
+
+      </div>
+
+    </div>
+
+  </section>
+
+  <footer>
+
+    <p>© 2025 INSERTMACRO. Все права защищены.</p>
+
+  </footer>
+
+  <!-- Модальные окна -->
+
+  <div id="rustModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('rustModal')">&times;</span>
+    <h2>RUST</h2>
+    <p>
+      • Поддержка любых мышек — не важно на какой мышке вы играете, потому что данный макрос для РАСТ | RUST будет работать на абсолютно любой, будь то простая офисная или игровая от популярных производителей, таких как A4TechBloody, Logitech, Razer, Corsair и т.д.;<br>
+      • Умная система распознавания оружия — макрос будет автоматически распознавать, какое оружие вы держите в руках и это все работает на любом разрешении, соотношении сторон экрана, на любых настройках графики и гаммы;<br>
+      • Автоопределение прицелов и модулей — макрос РАСТ | RUST автоматически распознает любой прицел или модуль надетый на ваше оружие. Также работает на любом разрешении, соотношении сторон экрана, настройках графики и гаммы;<br>
+      • Компенсация отдачи всего оружия:<br>
+      - AK-47, LR-300, MP5, Thompson, Custom SMG<br>
+      - M249, HMLMG, M39, Semi-automatic rifle<br>
+      - Semi-automatic pistol, M92 pistol, Python<br>
+      - Revolver, Nailgun, Double barrel shotgun<br>
+      - Pump shotgun, Spas-12, Multi grenade launcher<br>
+      - Snowball Gun<br>
+      • Любые прицелы — 8х, 16х, голографический, самодельный;<br>
+      • Поддержка всех модулей — ускоритель, дульный тормоз и глушитель;<br>
+      • Комбинирование прицелов и модулей — вы можете комбинировать любой прицел с любым модулем на любом оружии, макрос будет подстраиваться под ваш выбор;<br>
+      • Новая отдача — полная компенсация новой отдачи у автоматического оружия с идеальным сглаживанием для жесткой игры;<br>
+      • Старая отдача — хоть старой отдачи больше и нет в игре, но мы все равно сделали переключатель для ее полной поддержки на всем оружии, потому что остаются сервера, на которых все еще можно использовать старые паттерны отдачи;<br>
+      • Регулятор смещений — по вашему желанию, вы сможете настроить смещение работы макроса в любую сторону;<br>
+      • Уровень отдачи — вы сможете понизить уровень контроля отдачи, по любой из осей;<br>
+      • Настраиваемая чувствительность и FOV — вы сможете выставить любые настройки чувствительности и поле зрения (FOV), на которых вы любите играть;<br>
+      • Меню — каждую настройку вы сможете изменить в удобном графическом интерфейсе;<br>
+      • Zoom Mode — функция с помощью которой вы сможете приближать объекты находящиеся на дальнем расстоянии без использования дополнительных прицелов, а так же смотреть сквозь туман с помощью дополнительной опции «Инверсия цвета».
+    </p>
+    <!-- Кнопка "Купить" -->
+    <a href="https://t.me/INSERTMACRO_bot" class="buy-button" target="_blank">Купить</a>
   </div>
+</div>
+
+  <div id="cs2Modal" class="modal">
+
+    <div class="modal-content">
+
+      <span class="close" onclick="closeModal('cs2Modal')">&times;</span>
+
+      <h2>CS2</h2>
+
+      <p>
+
+        Основное:
+
+        • Поддержка любых мышек — не важно на какой мышке вы играете, данный макрос Counter Strike 2 будет работать на абсолютно любой, будь то простая офисная или игровая от популярных производителей, таких как A4TechBloody, Logitech, Razer, Corsair и т.д.;<br>
+
+        • Автонастройка — в программе присутствует функция, которая по одному нажатию выполнит за вас все необходимые настройки под ваши параметры;<br>
+
+        • Умная система распознавания оружия — макрос будет автоматически распознавать, какое оружие вы держите в руках и это все работает на любом разрешении, соотношении сторон экрана, на любых настройках графики, интерфейса и гаммы;<br>
+
+        • Компенсация отдачи всего оружия — система контроля отдачи Counter Strike 2 поддерживает любое оружие (AK-47, FAMAS, M4A1-S, M4A4, AUG, Galil AR, SG 553, MAC-10, MP9, MP7, MP5SD, UMP-45, P90, PP-19, M249, Negev, Nova, XM1014, MAG-7, Sawed-Off, P2000, USP-S, Five-SeveN, Glock-18, Tec-9, Dual Berettas, P250, CZ75-Auto, Desert Eagle, Revolver R8 и другие), а также мы выпускаем бесплатные обновление с новым или измененным оружием;<br>
+
+        • Регулятор смещений — по вашему желанию, вы сможете настроить смещение работы макроса в любую сторону;<br>
+
+        • Регулятор уровня отдачи — вы сможете понизить уровень контроля отдачи, по любой из осей;<br>
+
+        • Любая чувствительность — вы сможете выставить любые настройки чувствительности, на которых вы любите играть;<br>
+
+        • Меню — каждую настройку вы сможете изменить в удобном графическом интерфейсе;<br>
+
+        Дополнительно:
+
+        • Пиксель триггер — моментально сделает выстрел, при появлении противника в прицеле. Можно настроить чувствительность для легитной игры;<br>
+
+        • Zoom Mode — функция с помощью которой вы сможете приближать объекты находящиеся на дальнем расстоянии, без использования дополнительных прицелов, а так же инвертировать цвета;<br>
+
+        • Быстрый разворот — моментальный поворот с хуманизированным сглаживанием. Скорость и угол поворота можно настроить;<br>
+
+        • Автоматик мод — с данной функцией, любое полуавтоматическое оружие превращается в автоматическое и с максимально возможной скоростью стрельбы;<br>
+
+        • Графический прицел — по желанию, вы можете включить дополнительный графический прицел;<br>
+
+        • Прицел отдачи — показывает куда летят пули;<br>
+
+        • Anti-AFK — это функция, которая не позволит выкинуть вас с сервера, за долгий AFK, просто включите ее, если собираетесь на долго отойти от компьютера;<br>
+
+        • Скрытие меню — полное скрытие меню по одной кнопке, без выключения работы макроса, данная функция будет полезна при стримах на твиче, ютубе или в дискорде;<br>
+
+        • Облачный гейминг — макрос поддерживает работу с любыми облачными сервисами, к примеру такими как GeForce Now (GFN) и другими;<br>
+
+        • Panic key — при нажатии на эту кнопку, лаунчер полностью пропадет с вашего ПК с обходом программ для поиска недавно удаленных файлов (например Recuva), что поможет с легкостью пройти проверку на модифицированных серверах;<br>
+
+        • Баннихоп — автоматические прыжки с набором скорости движения;<br>
+
+        Безопасность и оптимизации:
+
+        • Отсутствие встраивания — наши макросы никогда не затрагивает файлы игры и никакие функции этого не требуют.
+
+        • Оптимизация — мы стараемся доводить оптимизацию до максимума, чтобы дать возможность играть с макросами даже на слабых ПК;<br>
+
+        • Обновления — макрос имеет автоматические обновления, вы всегда будете получать актуальную версию при запуске;<br>
+
+    </p>
+    <!-- Кнопка "Купить" -->
+    <a href="https://t.me/INSERTMACRO_bot" class="buy-button" target="_blank">Купить</a>
+  </div>
+</div>
+
+  <!-- Добавьте модальные окна для других игр аналогично -->
+
   <script src="script.js"></script>
+
 </body>
+
 </html>
